[package]
name = "tcp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = { version = "0.14.3", features = ["std"] }
tun-tap = "0.1.4"

[lib]
name = "tcp_rust"

[[bin]]
name = "tcp_rust"
